--- a/shopadmin/css/orderList.css
+++ b/shopadmin/css/orderList.css
@@ -57,7 +57,7 @@ table {
 	box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .52);
 	font-size:12px;
 	height: 37px;
-	line-height: 37px;
+	/*line-height: 37px;*/
 	text-align:center;
 	color:#fff;
 }
