--- a/shopadmin/css/layout.css
+++ b/shopadmin/css/layout.css
@@ -3,8 +3,8 @@
 	width:1220px;
 	margin:0px auto 0px auto;
 	border-top:2px solid #4A74BC;
-	border-left:1px solid #4A74BC;
-	border-right:1px solid #4A74BC;
+	/*border-left:1px solid #4A74BC;
+	border-right:1px solid #4A74BC;*/
 	border-bottom:2px solid #4A74BC;
 	overflow:hidden;
 	padding-bottom:20px;
