--- a/shopadmin/css/orderList.css
+++ b/shopadmin/css/orderList.css
@@ -24,6 +24,12 @@ table {
 	box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .52);
 	color:#fff!important;
 }
+.ml10 .active{
+	background-color: #3a5795 !important;
+	border: 0;
+	box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .52);
+	color:#fff!important;
+}
 .orderListTable {
 	border-collapse:collapse;
 	margin-top:20px;
