--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ html, body {
       color: #6e6e6e;
       font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-size: 14px;
-      background-image: url(../img/bg.png);
+      background-image: url("../img/bg.png");
 }
 
 * {
@@ -2052,7 +2052,7 @@ nav {
 }
 
 .search-two .form-control {
-      width: 57%;
+      width:85%;
 }
 
 .search-two .search-button {
@@ -2241,7 +2241,7 @@ h2.slider-tiile-middle span.bg-text {
 }
 
 .bc-home {
-      background: rgba(0, 0, 0, 0) url("img/breadcrumb-arrow.png") no-repeat scroll 100% 50%;
+      background: rgba(0, 0, 0, 0) url("../img/breadcrumb-arrow.png") no-repeat scroll 100% 50%;
       display: inline-block;
       margin: 0 6px 0 0;
       padding: 0 15px 0 0;
@@ -2320,7 +2320,7 @@ h2.slider-tiile-middle span.bg-text {
       -webkit-appearance: none;
       -o-appearance: none;
       appearance: none;
-      background: rgba(0, 0, 0, 0) url("img/caret.png") no-repeat scroll 94% 47%;
+      background: rgba(0, 0, 0, 0) url("../img/caret.png") no-repeat scroll 94% 47%;
       border: medium none;
       color: #6e6e6e;
       cursor: pointer;
@@ -4099,7 +4099,7 @@ textarea {
 }
 
 .mix-image a::after {
-      background: rgba(0, 0, 0, 0) url("img/portfolio/portfolio-shadow.png") repeat-x scroll center bottom;
+      background: rgba(0, 0, 0, 0) url("../img/portfolio/portfolio-shadow.png") repeat-x scroll center bottom;
       content: "";
       height: 100%;
       left: 0;
