--- a/shopadmin/css/boardRead.css
+++ b/shopadmin/css/boardRead.css
@@ -1,9 +1,9 @@
 #readContent {
 	float:left;
 	width:671px;
-	margin:10px 0px 0px 10px;
-	border:1px solid gray;
-	padding:5px;
+	/*margin:10px 0px 0px 10px;
+	border:1px solid gray;*/
+	/*padding:5px;*/
 }
 #readContent dt {
 	float:left;
@@ -77,7 +77,7 @@
 	border:1px solid gray;
 }
 #readContent .inputDate {
-	height:500px;
+	height:400px;
 }
 #jjList {
 	padding-left:30px;
