--- a/css/button.css
+++ b/css/button.css
@@ -3,14 +3,23 @@
 .btn-lg {
     padding: 10px 16px !important;
     font-size: 16px;
+    -webkit-border-radius:0px;
+    -moz-border-radius:0px;
+    border-radius:0px;
 }
 .btn-group-sm > .btn,
 .btn-sm {
     padding: 5px 10px !important;
+    -webkit-border-radius:0px;
+    -moz-border-radius:0px;
+    border-radius:0px;
 }
 .btn-group-xs > .btn,
 .btn-xs {
     padding: 1px 5px !important;
+    -webkit-border-radius:0px;
+    -moz-border-radius:0px;
+    border-radius:0px;
 }
 .btn-group .btn + .btn,
 .btn-group .btn + .btn-group,
