--- a/css/style.css
+++ b/css/style.css
@@ -4647,12 +4647,11 @@ p.checkout-coupon input[type=submit] {
 .logo a {
     transition: all 0.3s ease 0s;
     text-decoration: none;
-    color: #fff;
-    font-family: ABeeZee ;
-    font-size: 30px;
-    font-weight:bold;
-    text-shadow:0px 0px 0 rgb(207,207,207),1px 1px 0 rgb(169,169,169),2px 2px 0 rgb(131,131,131), 3px 3px 0 rgb(93,93,93),4px 4px 3px rgba(0,0,0,0.75),4px 4px 1px rgba(0,0,0,0.5),0px 0px 3px rgba(0,0,0,.2);
-}
+    font-family: "Roboto Slab";
+    font-size:30px;
+    background: linear-gradient(330deg, #E26A6A 0%, #99e052 25%, #52e0e0 50%, #9952e0 75%, #E26A6A 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;}
 
 .logo a:hover {
     color: #E26A6A;
