--- a/css/responsive.css
+++ b/css/responsive.css
@@ -60,7 +60,6 @@ width: 70%;
 
 
 @media screen and (max-width: 1400px) {
-    
 .logo {padding: 16px 3px 19px 8px;}
 .category-menu-list ul li span.cat-thumb {
   padding-left: 7px;
@@ -80,6 +79,9 @@ height: 27px;
 line-height: 25px;
 margin-right: 4px;
 width: 27px;
+}
+.plus-icon {
+    border:none;
 }
 .header-shipping ul li {
 font-size: 13px;
@@ -191,6 +193,9 @@ h2.slider-tiile-middle span.bg-text {
 .mobile-menu {display: block;}
 .header-top,/*.plus-account,*/.lang-currency,.search-two {/*display: none;*/}
 .contact-page .contact-form {margin-top: 40px;}
+    .search-icon-two {
+        border:none;
+    }
 .cart {
 height: 55px;
 line-height: 58px;
@@ -390,6 +395,12 @@ font-size: 14px;
 .top-timer i {
 font-size: 19px;
 margin-top: 17px;
+}
+.plus-icon {
+    border:none;
+}
+.col-xs-6 {
+    width: 48%;
 }
 .logo {
 /*width: 100%;*/
