최근배송지

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -397,7 +397,7 @@
         z-index: 2147483647;
     }
 
-    .cart-drop: {
+    .cart-drop{
         top: 70px;
     }
 
@@ -627,7 +627,7 @@
         width: 71px;
     }
 
-    .cart-drop: {
+    .cart-drop {
         top: 70px;
     }
 
