--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,13 @@
 html, body {
     height: 100%;
     color: #6e6e6e;
-    font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    /*font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+    /*font-size: 14px;*/
     background-image: url("../img/bg.png");
+
+    font-family: '돋움',dotum,sans-serif;
+    font-size: 12px;
+    font-weight: normal;
 }
 
 * {
@@ -5027,7 +5031,7 @@ td {
     vertical-align: middle;
 }
 
-.user-info td, th {
+.user-info tr>th, .user-info tr>td {
     text-align: left !important;
 }
 
