--- a/css/responsive.css
+++ b/css/responsive.css
@@ -157,9 +157,9 @@
         width: 27px;
     }
 
-    .plus-icon {
+    /*.plus-icon {
         border: none;
-    }
+    }*/
 
     .header-shipping ul li {
         font-size: 13px;
