--- a/shopadmin/css/layout.css
+++ b/shopadmin/css/layout.css
@@ -8,10 +8,11 @@
 	border-bottom:2px solid #4A74BC;
 	overflow:hidden;
 	padding-bottom:20px;
+    background-color: #f9f9f9;
 }
 #head {
 	background-color:#3a5795;
-	color:#ffffff;
+	color:#f9f9f9;
 	height:70px;
 	border-bottom:1px solid #4A74BC;
 }
@@ -44,20 +45,20 @@
 	float:left;
 	font-size:14px;
 	font-weight:700;
-	color:#ffffff;
+	color:#f9f9f9;
 	padding:3px 10px 3px 10px;
 	margin:0px;
 }
 
 #mainMenu a:link {
 	text-decoration:none;
-	color:#ffffff;
+	color:#f9f9f9;
 	font-size:13px;
 	font-weight:700;
 }
 #mainMenu a:visited {
 	text-decoration:none;
-	color:#ffffff;
+	color:#f9f9f9;
 	font-size:13px;
 	font-weight:700;
 }
@@ -69,7 +70,7 @@
 }
 #mainMenu a:active {
 	text-decoration:none;
-	color:#ffffff;
+	color:#f9f9f9;
 	font-size:13px;
 	font-weight:700;
 }
@@ -104,7 +105,7 @@
 }
 #leftMenu li a:hover{
 	background-color:#42599e;
-	color: white !important;
+	color: #f9f9f9 !important;
 }
 #main {
 	float:left;
@@ -113,6 +114,7 @@
 	overflow:auto;
 	position:relative;
 	overflow-x:hidden;
+	background-color: #f9f9f9;
 }
 #mainTitle {
 	width:100%;
@@ -131,7 +133,7 @@
 }
 .contentTable {
 	border:4px solid #B2D0F7;
-	background-color:white;
+	background-color:#f9f9f9;
 	background-repeat:repeat-x;
 	background-position:0px -400px;
 	margin-top:20px;
