--- a/css/style.css
+++ b/css/style.css
@@ -2795,12 +2795,12 @@ padding-right: 15px;
 
 .product-review-area .review-menu {
     float: left;
-    width: 20%;
+    width: 100%;
     text-transform: uppercase;
 }
 
 .review-menu .active > a {
-    color: #E26A6A;
+    color: #E26A6A !important;
 }
 
 .product-review-area .con {
@@ -2822,6 +2822,14 @@ padding-right: 15px;
     text-align: right;
     padding-right: 17px;
     font-size: 18px;
+    background-color:#333;
+}
+.product-review-area .review-menu li > a {
+    color:#fff;
+}
+
+.review-menu .active {
+    background-color: #fff !important;
 }
 
 .product-review-area .review-wrapper {
