--- a/css/style.css
+++ b/css/style.css
@@ -4441,7 +4441,7 @@ p.checkout-coupon input[type=submit] {
 
 .checkout-form-list label {
     color: #444;
-    margin-bottom: 10px;
+    margin-top: 5px;
 }
 
 .checkout-form-list input[type=text], .checkout-form-list input[type=password], .checkout-form-list input[type=email] {
